gateway/envoy-conf.yaml
static_resources:
  listeners:
    - name: primary_listener
      address:
        socket_address:
          address: "0.0.0.0"
          port_value: 10000

      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  internal_only_headers:
                    - "x-current-user"
                  response_headers_to_remove:
                    - "x-envoy-upstream-service-time"
                  response_headers_to_add:
                    - header:
                        key: "x-xss-protection"
                        value: "1; mode=block"
                      append: false
                    - header:
                        key: "x-frame-options"
                        value: "sameorigin"
                      append: false
                    - header:
                        key: "x-content-type-options"
                        value: "nosniff"
                      append: false
                  virtual_hosts:
                    - name: upstream
                      domains: [ "*" ]
                      typed_per_filter_config:
                        envoy.filters.http.ext_authz:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                          check_settings:
                            context_extensions:
                              virtual_host: upstream
                      routes:
                        - match: { prefix: "/auth/" }
                          route: { cluster: auth_service }
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match: { prefix: "/auth" }
                          route: { cluster: auth_service }
                          typed_per_filter_config:
                            envoy.filters.http.ext_authz:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthzPerRoute
                              disabled: true
                        - match: { prefix: "/" }
                          route: { cluster: fastapi_service }

                http_filters:
                  - name: envoy.filters.http.ext_authz
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
                      transport_api_version: V3
                      http_service:
                        server_uri:
                          uri: auth_service:8090
                          cluster: auth_service
                          timeout: 0.250s
                        authorization_response:
                          allowed_upstream_headers:
                            patterns:
                              - exact: x-current-user
                  - name: envoy.filters.http.router
                    typed_config: { }

  clusters:
    - name: fastapi_service
      connect_timeout: 0.250s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: fastapi_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: fastapi_service
                      port_value: 8080

    - name: auth_service
      connect_timeout: 0.250s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: auth_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: auth_service
                      port_value: 8090
